--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "event",
+  "name": "ignition-events",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "A dark-themed, animated front-end ticketing prototype built with React and Framer Motion.",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -25,5 +26,8 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "vite": "^7.1.7"
-  }
+  },
+  "author": "Rachit Doshi <rachitdoshi4@gmail.com>",
+  "license": "MIT",
+  "homepage": "https://RACHIT2025.github.io/event/" 
 }
